[project]
name = "srcode"
dynamic = ["version"]
description = "A simplified 'QR code'-like reader and generator"
readme = "README.pypi.md"
authors = [{ name = "Tomas R." }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Image Processing"
]
keywords = [
    "QR",
    "QR code",
    "Image processing",
    "Augmented reality",
    "Computer vision",
    "opencv",
]
dependencies = [
    "click",
    "numpy",
    "opencv-python"
]
requires-python = ">=3.8"

[tool.setuptools.dynamic]
version = { attr = "sr.__version__" }

[project.optional-dependencies]
dev = ["flake8", "isort", "pip-tools", "pytest", "pytest-snapshot", "pre-commit"]

[project.scripts]
sr = "sr.sr:cli"

[project.urls]
Homepage = "https://github.com/tomasr8/SR-Code"
Github = "https://github.com/tomasr8/SR-Code"

[tool.isort]
line_length=120
lines_after_imports=2

[tool.setuptools]
packages = ["sr"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
